@@ -1,23 +1,0 @@
-<oaf_info>
-
-<oaf_server iid="OAFIID:Bonobo_Sample_ControlFactory" type="exe"
-	location="bonobo-sample-controls-2">
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:Bonobo/GenericFactory:1.0"/>
-	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="Sample controls factory"/>
-	<oaf_attribute name="description" type="string" value="Factory for the bonobo sample controls"/>
-</oaf_server>
-
-<oaf_server iid="OAFIID:Bonobo_Sample_Entry" type="factory"
-	location="OAFIID:Bonobo_Sample_ControlFactory">
-	<oaf_attribute name="repo_ids" type="stringv">
-		<item value="IDL:Bonobo/Unknown:1.0"/>
-		<item value="IDL:Bonobo/Control:1.0"/>
-	</oaf_attribute>
-	<oaf_attribute name="name" type="string" value="a basic entry control"/>
-	<oaf_attribute name="description" type="string" value="A sample bonobo control wrapping a Gtk Entry widget."/>
-</oaf_server>
-
-</oaf_info>
-
